Update design of disabled states.
Change-Id: I7f3cce133cc13985a256c840048245a4c336c2e4

--- a/app/src/main/res/layout/view_suggested_edits_disabled_states.xml
+++ b/app/src/main/res/layout/view_suggested_edits_disabled_states.xml
@@ -52,6 +52,7 @@
     </LinearLayout>
 
     <View
+        android:id="@+id/linksDivider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="?attr/chip_background_color" />
@@ -80,7 +81,6 @@
     </LinearLayout>
 
     <View
-        android:id="@+id/helpLayoutBorder"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="?attr/chip_background_color"/>
