--- a/app/src/main/res/layout/fragment_suggested_edits_tasks.xml
+++ b/app/src/main/res/layout/fragment_suggested_edits_tasks.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     android:background="?attr/main_toolbar_color">
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:id="@+id/suggestedEditsScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -238,6 +238,6 @@
 
         </FrameLayout>
 
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
