Refactor logic of disabled states, and centralize quality checks.
Change-Id: I609a3536088572732ebeb60e62ba5dcb4e7a9a0d

--- a/app/src/main/res/layout/view_suggested_edits_disabled_states.xml
+++ b/app/src/main/res/layout/view_suggested_edits_disabled_states.xml
@@ -29,13 +29,14 @@
         android:background="?attr/list_separator_drawable" />
 
     <LinearLayout
-        android:id="@+id/editingTipsLayout"
+        android:id="@+id/linkContainer1"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:background="?attr/selectableItemBackground"
         android:gravity="center_vertical">
 
         <TextView
+            android:id="@+id/linkText1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -58,13 +59,14 @@
         android:background="?attr/list_separator_drawable" />
 
     <LinearLayout
-        android:id="@+id/suggestedEditsHelpLayout"
+        android:id="@+id/linkContainer2"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:background="?attr/selectableItemBackground"
         android:gravity="center_vertical">
 
         <TextView
+            android:id="@+id/linkText2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
