Switch over to Glide.
Change-Id: I111f6b1b6eb3e8eb55a022af30861be01cfd2575

--- a/app/src/main/res/layout-land/fragment_suggested_edits_cards_item.xml
+++ b/app/src/main/res/layout-land/fragment_suggested_edits_cards_item.xml
@@ -60,9 +60,7 @@
                     android:id="@+id/viewArticleImage"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:actualImageScaleType="focusCrop"
-                    app:viewAspectRatio="3.8"
-                    app:fadeDuration="0" />
+                    android:scaleType="centerCrop" />
 
                 <LinearLayout
                     android:id="@+id/viewArticleContainer"
