--- a/app/src/main/res/layout/fragment_theme_fitting_room.xml
+++ b/app/src/main/res/layout/fragment_theme_fitting_room.xml
@@ -49,7 +49,7 @@
                     android:layout_height="80dp"
                     android:layout_marginStart="8dp"
                     android:contentDescription="@null"
-                    app:actualImageScaleType="centerInside" />
+                    android:scaleType="centerInside" />
 
             </LinearLayout>
 
