--- a/app/src/main/res/layout/view_description_edit_review.xml
+++ b/app/src/main/res/layout/view_description_edit_review.xml
@@ -26,8 +26,7 @@
                 style="@style/SimpleDraweeViewPlaceholder.SuggestedEdits"
                 android:layout_width="match_parent"
                 android:layout_height="192dp"
-                app:actualImageScaleType="focusCrop"
-                app:fadeDuration="0" />
+                android:scaleType="centerCrop" />
 
             <View
                 android:layout_width="match_parent"
@@ -104,8 +103,7 @@
             style="@style/SimpleDraweeViewPlaceholder.SuggestedEdits.Review"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:actualImageScaleType="fitCenter"
-            app:fadeDuration="0" />
+            android:scaleType="fitCenter" />
 
         <org.wikipedia.views.AppTextView
             android:id="@+id/galleryDescriptionText"
