--- a/app/src/main/res/layout/view_card_featured_image.xml
+++ b/app/src/main/res/layout/view_card_featured_image.xml
@@ -20,7 +20,7 @@
             style="@style/SimpleDraweeViewPlaceholder"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:actualImageScaleType="focusCrop" />
+            android:scaleType="centerCrop" />
 
         <TextView
             android:id="@+id/featured_image_description_Text"
