--- a/app/src/main/res/layout/view_description_edit_read_article_bar.xml
+++ b/app/src/main/res/layout/view_description_edit_read_article_bar.xml
@@ -49,7 +49,7 @@
         app:layout_constraintTop_toBottomOf="@+id/viewDivider"
         app:layout_constraintHorizontal_weight="1" />
 
-    <com.facebook.drawee.view.SimpleDraweeView
+    <ImageView
         android:id="@+id/viewImageThumbnail"
         style="@style/SimpleDraweeViewPlaceholder"
         android:layout_width="40dp"
@@ -61,6 +61,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/viewArticleTitle"
         app:layout_constraintTop_toBottomOf="@+id/viewDivider"
-        app:layout_constraintVertical_weight="1" />
+        app:layout_constraintVertical_weight="1"
+        android:contentDescription="@null"/>
 
 </merge>
