--- a/app/src/main/res/layout/view_suggested_edit_card.xml
+++ b/app/src/main/res/layout/view_suggested_edit_card.xml
@@ -27,8 +27,7 @@
             style="@style/SimpleDraweeViewPlaceholder.SuggestedEdits"
             android:layout_width="match_parent"
             android:layout_height="201dp"
-            app:actualImageScaleType="focusCrop"
-            app:fadeDuration="0" />
+            android:scaleType="centerCrop" />
 
         <LinearLayout
             android:id="@+id/viewArticleContainer"
