--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -83,7 +83,8 @@
                     android:id="@+id/login_2fa_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/login_2fa_hint">
+                    android:hint="@string/login_2fa_hint"
+                    android:visibility="gone">
 
                     <org.wikipedia.views.PlainPasteEditText
                         style="?android:textAppearanceMedium"
@@ -91,8 +92,7 @@
                         android:layout_height="wrap_content"
                         android:imeOptions="flagNoExtractUi"
                         android:inputType="textVisiblePassword|textNoSuggestions"
-                        android:maxLines="1"
-                        android:visibility="gone" />
+                        android:maxLines="1" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <Button
