--- a/app/src/main/res/layout/fragment_suggested_edits_tasks.xml
+++ b/app/src/main/res/layout/fragment_suggested_edits_tasks.xml
@@ -71,6 +71,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         app:layout_constraintEnd_toEndOf="parent"
+                        android:minWidth="160dp"
                         app:layout_constraintStart_toStartOf="@id/editQualityStatsView"
                         app:layout_constraintHorizontal_chainStyle="spread"
                         app:layout_constraintTop_toTopOf="@id/contributionsStatsView" />
@@ -87,6 +88,7 @@
                         android:id="@+id/editQualityStatsView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:minWidth="160dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="@id/pageViewStatsView" />
 
