--- a/app/src/main/res/layout-sw600dp/view_suggested_edits_task_item.xml
+++ b/app/src/main/res/layout-sw600dp/view_suggested_edits_task_item.xml
@@ -60,20 +60,20 @@
     <LinearLayout
         android:id="@+id/addContainer"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:padding="4dp"
-        android:layout_marginTop="12dp"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintTop_toBottomOf="@id/taskDescription"
         app:layout_constraintStart_toEndOf="@id/taskIconCircle"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:background="?attr/selectableItemBackground">
+        android:background="?attr/selectableItemBackgroundBorderless">
 
         <ImageView
             android:id="@+id/add_image"
             android:layout_width="24dp"
             android:layout_height="24dp"
+            android:layout_gravity="center_vertical"
             android:contentDescription="@null"
             android:src="@drawable/ic_add_gray_white_24dp"
             android:tint="?attr/colorAccent" />
@@ -94,17 +94,18 @@
     <LinearLayout
         android:id="@+id/translateContainer"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:padding="4dp"
         android:layout_marginStart="16dp"
         app:layout_constraintTop_toTopOf="@id/addContainer"
         app:layout_constraintStart_toEndOf="@id/addContainer"
-        android:background="?attr/selectableItemBackground">
+        android:background="?attr/selectableItemBackgroundBorderless">
 
         <ImageView
             android:id="@+id/suggestedEditsTranslateImage"
             android:layout_width="24dp"
             android:layout_height="24dp"
+            android:layout_gravity="center_vertical"
             android:contentDescription="@null"
             android:src="@drawable/ic_translate_white_24dp"
             android:tint="?attr/colorAccent" />
