--- a/app/src/main/res/drawable/ic_image_caption.xml
+++ b/app/src/main/res/drawable/ic_image_caption.xml
@@ -4,7 +4,7 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
   <group>
-    <clip-path android:pathData="M17,2a2,2 0,0 1,2 2v16a2,2 0,0 1,-2 2L7,22a2,2 0,0 1,-2 -2L5,4a2,2 0,0 1,2 -2h10zM14,13L8,13a1,1 0,0 0,0 2h6a1,1 0,0 0,0 -2zM16,9L8,9a1,1 0,0 0,-0.117 1.993L8,11h8a1,1 0,0 0,0 -2z M 0,0"/>
+    <clip-path android:pathData="M20,4a2,2 0,0 1,2 2v12a2,2 0,0 1,-2 2L4,20a2,2 0,0 1,-2 -2L2,6a2,2 0,0 1,2 -2h16zM14,15L6,15a1,1 0,0 0,-0.117 1.993L6,17h8a1,1 0,0 0,0 -2zM14.502,7L11.006,11.509 8.504,8.5 5,13h14l-4.498,-6z M 0,0"/>
     <path
         android:pathData="M0,0h24v24L0,24z"
         android:fillColor="#36C"/>
