--- a/app/src/main/res/layout/view_suggested_edits_task_item.xml
+++ b/app/src/main/res/layout/view_suggested_edits_task_item.xml
@@ -25,6 +25,7 @@
         android:layout_marginStart="12dp"
         android:layout_marginTop="12dp"
         android:tint="?attr/themed_icon_color"
+        android:alpha="0.7"
         tools:src="@drawable/ic_article_description"
         android:contentDescription="@null"/>
 
