Final (??) design updates in Suggested Edits.
Change-Id: Id95f96f9bed26df67db022fc0bc0e6298414546e

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -39,7 +39,10 @@
             android:background="@android:color/transparent"
             app:itemIconTint="?attr/nav_tab_item_color_state"
             app:itemTextColor="?attr/nav_tab_item_color_state"
+            app:itemTextAppearanceInactive="@style/BottomNavigationTextAppearanceInactive"
+            app:itemTextAppearanceActive="@style/BottomNavigationTextAppearanceActive"
             app:tabGravity="fill"
+            app:labelVisibilityMode="labeled"
             app:tabIndicatorColor="@android:color/transparent" />
     </FrameLayout>
 
