--- a/app/src/main/res/layout/fragment_suggested_edits_tasks.xml
+++ b/app/src/main/res/layout/fragment_suggested_edits_tasks.xml
@@ -56,7 +56,8 @@
                     android:clipChildren="false"
                     android:clipToPadding="false"
                     android:paddingStart="@dimen/activity_horizontal_margin"
-                    android:paddingEnd="@dimen/activity_horizontal_margin">
+                    android:paddingEnd="@dimen/activity_horizontal_margin"
+                    android:background="?attr/main_toolbar_color">
 
                     <org.wikipedia.views.ImageTitleDescriptionView
                         android:id="@+id/contributionsStatsView"
@@ -116,87 +117,24 @@
                         android:textAlignment="center"
                         android:textSize="@dimen/suggested_edits_message_textview_text_size" />
 
-                    <LinearLayout
-                        android:id="@+id/toolTipFirstRow"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:visibility="gone"
-                        android:clipChildren="false"
-                        android:clipToPadding="false"
-                        android:paddingBottom="8dp"
-                        app:layout_constraintTop_toBottomOf="@id/contributionsStatsView">
-
-                        <ImageView
-                            android:id="@+id/toolTipArrowFirstRow"
-                            android:layout_width="30dp"
-                            android:layout_height="15dp"
-                            android:layout_gravity="end"
-                            android:layout_marginStart="@dimen/suggested_edits_top_tooltip_margin"
-                            android:layout_marginEnd="@dimen/suggested_edits_top_tooltip_margin"
-                            android:src="@drawable/top_notch"
-                            android:background="@drawable/triangle"
-                            android:elevation="4dp"
-                            android:contentDescription="@null" />
-
-                        <TextView
-                            android:id="@+id/toolTipTextFirstRow"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="?attr/paper_color"
-                            android:elevation="4dp"
-                            android:lineSpacingExtra="6sp"
-                            android:padding="8dp"
-                            android:textSize="@dimen/suggested_edits_message_textview_text_size" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/toolTipSecondRow"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:visibility="gone"
-                        android:clipChildren="false"
-                        android:clipToPadding="false"
-                        android:paddingBottom="8dp"
-                        app:layout_constraintTop_toBottomOf="@id/pageViewStatsView">
-
-                        <ImageView
-                            android:id="@+id/toolTipArrowSecondRow"
-                            android:layout_width="30dp"
-                            android:layout_height="15dp"
-                            android:layout_gravity="end"
-                            android:layout_marginStart="@dimen/suggested_edits_top_tooltip_margin"
-                            android:layout_marginEnd="@dimen/suggested_edits_top_tooltip_margin"
-                            android:src="@drawable/top_notch"
-                            android:background="@drawable/triangle"
-                            android:elevation="4dp"
-                            android:contentDescription="@null" />
-
-                        <TextView
-                            android:id="@+id/toolTipTextSecondRow"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="?attr/paper_color"
-                            android:elevation="4dp"
-                            android:lineSpacingExtra="6sp"
-                            android:padding="8dp"
-                            android:textSize="@dimen/suggested_edits_message_textview_text_size" />
-                    </LinearLayout>
-
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
-                <View
-                    android:layout_width="30dp"
-                    android:layout_height="15dp"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="8dp"
-                    android:background="@drawable/triangle" />
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="?attr/main_toolbar_color">
+                    <View
+                        android:layout_width="30dp"
+                        android:layout_height="15dp"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="8dp"
+                        android:background="@drawable/triangle" />
+                </FrameLayout>
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/tasksRecyclerView"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:paddingStart="@dimen/activity_horizontal_margin"
                     android:paddingEnd="@dimen/activity_horizontal_margin"
                     android:background="?attr/paper_color" />
