--- a/app/src/main/res/layout/view_nav_tab_overlay_fill.xml
+++ b/app/src/main/res/layout/view_nav_tab_overlay_fill.xml
@@ -2,7 +2,8 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingBottom="16dp">
     <ImageView
         android:id="@+id/pulsingCircleOuter"
         android:layout_width="52dp"
