--- a/app/src/main/res/values/preference_keys.xml
+++ b/app/src/main/res/values/preference_keys.xml
@@ -107,4 +107,6 @@
     <string name="preference_key_suggested_edits_survey_clicked">suggestedEditsSurveyClicked</string>
     <string name="preference_key_show_suggested_edits_survey">showSuggestedEditsSurvey</string>
     <string name="preference_key_show_suggested_edits_tooltip">showSuggestedEditsTooltip</string>
+    <string name="preference_key_visited_article_page">hasVisitedArticlePage</string>
+    <string name="preference_key_fundraising_bottom_sheet_shown_in_year">fundraisingBottomSheetShownInYear</string>
 </resources>
