Make font size of nav tab labels dependent on screen width.
Change-Id: I9110113abcbe1c48333d36f9f7918509d96b8cf8

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -137,11 +137,11 @@
     </style>
 
     <style name="BottomNavigationTextAppearanceInactive">
-        <item name="android:textSize">10dp</item>
+        <item name="android:textSize">@dimen/bottom_nav_label_text_size</item>
     </style>
 
     <style name="BottomNavigationTextAppearanceActive">
-        <item name="android:textSize">10dp</item>
+        <item name="android:textSize">@dimen/bottom_nav_label_text_size</item>
     </style>
 
     <style name="ToolBarTitleText" parent="@style/TextAppearance.AppCompat.Widget.ActionBar.Title">
