--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -12,6 +12,8 @@
 
     <dimen name="snackbar_action_inline_max_dimen">0dp</dimen>
 
+    <dimen name="bottom_nav_label_text_size">12sp</dimen>
+
 <!-- Suggested Edits -->
     <dimen name="suggested_edits_icon_size">48dp</dimen>
     <dimen name="suggested_edits_icon_background_size">40dp</dimen>
