--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,6 +5,8 @@
 
     <dimen name="toolbar_default_elevation">4dp</dimen>
 
+    <dimen name="bottom_nav_label_text_size">10sp</dimen>
+
     <dimen name="popup_menu_drop_down_horizontal_offset">8dp</dimen>
     <dimen name="popup_menu_drop_down_vertical_offset">-8dp</dimen>
 
