Introduce color_group_53, and use it for edit task icon circle.
Change-Id: Ib3e58e8fd1938bf888778dce9a2da5c0f990c67f

--- a/app/src/main/res/layout-sw600dp/view_suggested_edits_task_item.xml
+++ b/app/src/main/res/layout-sw600dp/view_suggested_edits_task_item.xml
@@ -13,7 +13,7 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="24dp"
         android:src="@drawable/shape_circle"
-        android:tint="?attr/multi_select_background_color"
+        android:tint="?attr/color_group_53"
         android:contentDescription="@null"/>
 
     <ImageView
