--- a/app/src/main/res/values/styles_black.xml
+++ b/app/src/main/res/values/styles_black.xml
@@ -26,6 +26,7 @@
         <!-- Background for cards, lists, and controls -->
         <item name="paper_color">@color/base0</item>
         <item name="suggestions_background_color">@color/base0</item>
+        <item name="color_group_53">@color/accent20</item>
 
     </style>
 
