--- a/app/src/main/res/layout/dialog_theme_chooser.xml
+++ b/app/src/main/res/layout/dialog_theme_chooser.xml
@@ -114,10 +114,11 @@
             android:id="@+id/theme_chooser_match_system_theme_switch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
             android:gravity="center_vertical"
             android:text="@string/theme_chooser_dialog_match_system_theme_switch_label"
-            android:textColor="?attr/section_title_color" />
+            android:textColor="?attr/primary_text_color" />
 
         <LinearLayout
             android:layout_width="300dp"
