--- a/app/src/main/res/xml/developer_preferences.xml
+++ b/app/src/main/res/xml/developer_preferences.xml
@@ -24,12 +24,8 @@
             android:title="@string/preference_key_announcement_version_code"
             android:dialogMessage="@string/preferences_developer_announcement_version_code_hint"/>
 
-        <org.wikipedia.settings.IntPreference
-            style="@style/IntPreference"
-            android:key="@string/preference_key_fundraising_dialog_shown_in_year"
-            android:title="@string/preference_key_fundraising_dialog_shown_in_year"
-            android:dialogMessage="@string/preferences_developer_announcement_version_code_hint"/>
-
+        <Preference android:key="@string/preferences_developer_announcement_reset_shown_dialogs_key"
+            android:title="@string/preferences_developer_announcement_reset_shown_dialogs_title" />
     </PreferenceCategory>
 
     <PreferenceCategory android:title="@string/preferences_developer_restbase_heading">
