--- a/app/src/main/res/values/styles_dark.xml
+++ b/app/src/main/res/values/styles_dark.xml
@@ -82,6 +82,7 @@
         <item name="suggestions_background_color">@color/base12</item>
         <item name="color_group_52">@color/accent75</item>
         <item name="color_group_53">@color/accent30</item>
+        <item name="color_group_54">@color/base14</item>
 
     </style>
 
