--- a/app/src/main/res/values/styles_light.xml
+++ b/app/src/main/res/values/styles_light.xml
@@ -77,6 +77,7 @@
         <item name="chip_text_color">@color/base20</item>
         <item name="color_group_52">@color/accent75</item>
         <item name="color_group_53">@color/accent90</item>
+        <item name="color_group_54">@color/accent90</item>
         <item name="action_mode_green_background">@color/green50</item>
 
         <!-- Background for cards, lists, and controls -->
