--- a/app/src/main/res/values/styles_sepia.xml
+++ b/app/src/main/res/values/styles_sepia.xml
@@ -27,6 +27,7 @@
         <item name="button_background_color">@color/parchment</item>
         <item name="tab_placeholder_text_color">@color/amate</item>
         <item name="color_group_53">@color/amate</item>
+        <item name="color_group_54">@color/amate</item>
 
         <item name="chart_shade5">@color/kraft</item>
         <item name="green_highlight_color">@color/green50</item>
