Final (no, really) design tweaks in Suggested Edits.
Change-Id: Ic02326a170e16c18bcfc0a45433d18d2d71fc0f9

--- a/app/src/main/res/layout/fragment_suggested_edits_tasks.xml
+++ b/app/src/main/res/layout/fragment_suggested_edits_tasks.xml
@@ -98,7 +98,7 @@
                     <ImageView
                         android:id="@+id/onboardingImageView"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="@dimen/suggested_edits_top_illustration_height"
                         android:contentDescription="@null"
                         android:visibility="gone"
                         android:layout_marginTop="16dp"
