--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -20,6 +20,6 @@
     <dimen name="suggested_edits_icon_title_text_size">24sp</dimen>
     <dimen name="suggested_edits_title_margin_start">24dp</dimen>
     <dimen name="suggested_edits_message_textview_text_size">20sp</dimen>
-
+    <dimen name="suggested_edits_top_illustration_height">132dp</dimen>
 
 </resources>
